--- a/templates/login.html
+++ b/templates/login.html
@@ -60,7 +60,7 @@
                                     <div class="dropdown-menu"
                                         role="menu"><a class="dropdown-item" role="presentation" href="profile.html"><i class="fa fa-address-card" style="padding-right:5px;"></i>Profile</a><a class="dropdown-item" role="presentation" href="post_announcement.html"><i class="fa fa-envelope-open-o" style="padding-right:5px;"></i>Create Announcement</a>
                                         <a
-                                            class="dropdown-item" role="presentation" href="logout.html"><i class="fa fa-sign-out"></i>&nbsp;Logout</a><a class="dropdown-item" role="presentation" href="user_announcements.html">Edit Announcements</a></div>
+                                            class="dropdown-item" role="presentation" href="user_announcements.html"><i class="fa fa-pencil"></i>&nbsp;Edit Announcements</a><a class="dropdown-item" role="presentation" href="logout.html"><i class="fa fa-sign-out"></i>&nbsp;Logout</a></div>
                                 </li>
                                 <li class="nav-item" role="presentation"><a class="nav-link" href="dashboard.html" style="padding-right:20px;"><i class="fa fa-tachometer" style="padding-right:7px;"></i>Dashboard</a></li>
                                 <li class="nav-item" role="presentation"><a class="nav-link" href="login.html" id="nav_login" style="padding-right:20px;"><i class="fa fa-sign-in" style="padding-right:7px;"></i>Login</a></li>
