Teachers can edit student permissions.

--- a/templates/students.html
+++ b/templates/students.html
@@ -64,17 +64,16 @@
     <div class="row">
         <div class="col"><div id="dashboard"></div></div>
     </div>
-    <div style="padding-right:10px;padding-left:10px;padding-top:20px;height:508px;">
-        <div class="d-block" style="height:auto;background-color:#ffffff;padding:10px;padding-left:20px;padding-right:10px;margin-bottom:5px;">
-            <div class="d-inline-block" style="font-family:'News Cycle', sans-serif;width:75%;">
-                <p style="font-size:20px;margin-bottom:5px;width:100%;">Student Name<br></p>
-                <p style="width:100%;color:rgb(132,164,197);">Authorization Level (ex. Trusted User or Requires Teacher Supervision)<br></p>
-            </div>
-            <div class="dropdown show d-inline-block float-right" style="width:25%;margin-top:0px;margin-right:0px;padding-left:0px;margin-left:0px;"><button class="btn btn-primary btn-sm dropdown-toggle d-inline-block float-right" data-toggle="dropdown" aria-expanded="true" type="button" style="color:rgb(33,37,41);font-family:'News Cycle', sans-serif;font-size:16px;width:80px;">Options</button>
-                <div
-                    class="dropdown-menu dropdown-menu-right show" role="menu"><a class="dropdown-item" role="presentation" href="#" style="color:rgb(220,20,20);font-family:'News Cycle', sans-serif;">Delete</a><a class="dropdown-item" role="presentation" href="#" style="font-family:'News Cycle', sans-serif;color:rgb(79,160,102);">Edit Permissions</a>
-                    <a
-                        class="dropdown-item" role="presentation" href="#">Third Item</a>
+    <div id="student_div" style="padding-right:10px;padding-left:10px;padding-top:20px;height:508px;">
+        <div class="container student-template" style="display:none" student_uid="">
+            <div class="d-block" style="height:auto;background-color:#ffffff;padding:10px;padding-left:20px;padding-right:10px;margin-bottom:5px;">
+                <div class="d-inline-block" style="font-family:'News Cycle', sans-serif;width:75%;">
+                    <p class="student-name" style="font-size:20px;margin-bottom:5px;width:100%;">Student Name<br></p>
+                    <p class="student-perm" style="width:100%;color:rgb(132,164,197);">Authorization Level (ex. Trusted User or Requires Teacher Supervision)<br></p>
+                </div>
+                <div class="dropdown d-inline-block float-right student-options" style="width:25%;margin-top:0px;margin-right:0px;padding-left:0px;margin-left:0px;"><button class="btn btn-primary btn-sm dropdown-toggle d-inline-block float-right" data-toggle="dropdown" aria-expanded="false" type="button" style="color:rgb(33,37,41);font-family:'News Cycle', sans-serif;font-size:16px;width:80px;">Options</button>
+                    <div
+                        class="dropdown-menu dropdown-menu-right" role="menu"><a class="dropdown-item student-edit" role="presentation" href="#" style="font-family:'News Cycle', sans-serif;color:rgb(79,160,102);">Edit Permissions</a><a class="dropdown-item student-delete" role="presentation" href="#" style="color:rgb(220,20,20);font-family:'News Cycle', sans-serif;">Delete</a></div>
             </div>
         </div>
     </div>
@@ -108,6 +107,7 @@
     <script src="static/js/server_function/confirmation_confirmed.js"></script>
     <script src="static/js/website_function/navbar.js"></script>
     <script src="static/js/server_function/review_confirmed.js"></script>
+    <script src="static/js/server_function/students.js"></script>
     <script src="static/js/website_function/logout.js"></script>
 </body>
 
