--- a/templates/user_announcements.html
+++ b/templates/user_announcements.html
@@ -117,6 +117,7 @@
     <script src="static/js/server_function/confirmation_confirmed.js"></script>
     <script src="static/js/website_function/navbar.js"></script>
     <script src="static/js/server_function/review_confirmed.js"></script>
+    <script src="static/js/server_function/students.js"></script>
     <script src="static/js/website_function/logout.js"></script>
 </body>
 
