Teachers can now add students(not tested)

--- a/templates/add_student.html
+++ b/templates/add_student.html
@@ -34,40 +34,41 @@
 </head>
 
 <body>
-    <div>
-        <header>
-            <div class="d-flex align-items-center" style="height:100vh;background-color:rgb(238,238,238);padding:62vh 20px 55vh;padding-top:380px;padding-bottom:230px;">
-                <div class="login-card" style="font-family:'News Cycle', sans-serif;width:350px;height:370px;">
-                    <p class="profile-name-card" style="font-size:89px;color:rgb(156,157,157);"> <i class="fa fa-check" style="color:rgb(157,157,157);"></i></p>
-                    <p class="text-center" style="color:rgb(106,102,102);">A confirmation has now been sent to your pdsb email.&nbsp;</p><a class="d-block forgot-password" href="#" style="padding-left:0px;">No email to be found? Click here to resend the confirmation</a></div>
-                <nav class="navbar navbar-light navbar-expand-lg fixed-top bg-white transparency border-bottom border-light"
-                    id="transmenu" style="color:rgb(255,255,255);background-color:#439d4c;">
-                    <div class="container"><a class="navbar-brand text-success" href="index.html" style="font-family:'News Cycle', sans-serif;font-size:39px;">&nbsp;<img class="img-fluid" src="static/img/Aphel_icon.png" alt="Aphel Technologies" width="97px" height="97px" style="padding-right:0px;margin-right:10px;margin-bottom:7px;"></a>
-                        <button
-                            class="navbar-toggler collapsed" data-toggle="collapse" data-target="#navcol-1"><span></span><span></span><span></span></button>
-                            <div class="collapse navbar-collapse" id="navcol-1" style="font-family:'News Cycle', sans-serif;font-size:22px;">
-                                <ul class="nav navbar-nav ml-auto">
-                                    <li class="dropdown"><a class="dropdown-toggle nav-link dropdown-toggle" data-toggle="dropdown" aria-expanded="false" href="#" style="padding-right:20px;"><i class="fa fa-info-circle" style="padding-right:7px;"></i>Info</a>
-                                        <div class="dropdown-menu"
-                                            role="menu"><a class="dropdown-item" role="presentation" href="http://pchacks.ca/index.html#about"><i class="fa fa-handshake-o" style="padding-right:5px;"></i>About Us</a><a class="dropdown-item" role="presentation" href="http://pchacks.ca/index.html#contact"><i class="fa fa-volume-control-phone" style="padding-right:5px;"></i>Contact</a></div>
-                                    </li>
-                                    <li class="dropdown"><a class="dropdown-toggle nav-link dropdown-toggle" data-toggle="dropdown" aria-expanded="false" href="#" id="nav_user" style="padding-right:20px;"><i class="fa fa-user" style="padding-right:7px;"></i>User</a>
-                                        <div class="dropdown-menu"
-                                            role="menu"><a class="dropdown-item" role="presentation" href="profile.html"><i class="fa fa-address-card" style="padding-right:5px;"></i>Profile</a><a class="dropdown-item" role="presentation" href="post_announcement.html"><i class="fa fa-envelope-open-o" style="padding-right:5px;"></i>Create Announcement</a>
-                                            <a
-                                                class="dropdown-item" role="presentation" href="user_announcements.html"><i class="fa fa-pencil"></i>&nbsp;Edit Announcements</a><a class="dropdown-item" role="presentation" href="logout.html"><i class="fa fa-sign-out"></i>&nbsp;Logout</a></div>
-                                    </li>
-                                    <li class="nav-item" role="presentation"><a class="nav-link" href="dashboard.html" style="padding-right:20px;"><i class="fa fa-tachometer" style="padding-right:7px;"></i>Dashboard</a></li>
-                                    <li class="nav-item" role="presentation"><a class="nav-link" href="login.html" id="nav_login" style="padding-right:20px;"><i class="fa fa-sign-in" style="padding-right:7px;"></i>Login</a></li>
-                                    <li class="nav-item" role="presentation"><a class="nav-link" href="signup.html" id="nav_register" style="padding-right:20px;"><i class="fa fa-wpforms" style="padding-right:7px;"></i>Register</a></li>
-                                </ul>
-                            </div>
+    <div style="height:183px;">
+        <nav class="navbar navbar-light navbar-expand-lg fixed-top bg-white transparency border-bottom border-light" id="transmenu" style="color:rgb(255,255,255);background-color:#439d4c;">
+            <div class="container"><a class="navbar-brand text-success" href="index.html" style="font-family:'News Cycle', sans-serif;font-size:39px;">&nbsp;<img class="img-fluid" src="static/img/Aphel_icon.png" alt="Aphel Technologies" width="97px" height="97px" style="padding-right:0px;margin-right:10px;margin-bottom:7px;"></a>
+                <button
+                    class="navbar-toggler collapsed" data-toggle="collapse" data-target="#navcol-1"><span></span><span></span><span></span></button>
+                    <div class="collapse navbar-collapse" id="navcol-1" style="font-family:'News Cycle', sans-serif;font-size:22px;">
+                        <ul class="nav navbar-nav ml-auto">
+                            <li class="dropdown"><a class="dropdown-toggle nav-link dropdown-toggle" data-toggle="dropdown" aria-expanded="false" href="#" style="padding-right:20px;"><i class="fa fa-info-circle" style="padding-right:7px;"></i>Info</a>
+                                <div class="dropdown-menu"
+                                    role="menu"><a class="dropdown-item" role="presentation" href="http://pchacks.ca/index.html#about"><i class="fa fa-handshake-o" style="padding-right:5px;"></i>About Us</a><a class="dropdown-item" role="presentation" href="http://pchacks.ca/index.html#contact"><i class="fa fa-volume-control-phone" style="padding-right:5px;"></i>Contact</a></div>
+                            </li>
+                            <li class="dropdown"><a class="dropdown-toggle nav-link dropdown-toggle" data-toggle="dropdown" aria-expanded="false" href="#" id="nav_user" style="padding-right:20px;"><i class="fa fa-user" style="padding-right:7px;"></i>User</a>
+                                <div class="dropdown-menu"
+                                    role="menu"><a class="dropdown-item" role="presentation" href="profile.html"><i class="fa fa-address-card" style="padding-right:5px;"></i>Profile</a><a class="dropdown-item" role="presentation" href="post_announcement.html"><i class="fa fa-envelope-open-o" style="padding-right:5px;"></i>Create Announcement</a>
+                                    <a
+                                        class="dropdown-item" role="presentation" href="user_announcements.html"><i class="fa fa-pencil"></i>&nbsp;Edit Announcements</a><a class="dropdown-item" role="presentation" href="logout.html"><i class="fa fa-sign-out"></i>&nbsp;Logout</a></div>
+                            </li>
+                            <li class="nav-item" role="presentation"><a class="nav-link" href="dashboard.html" style="padding-right:20px;"><i class="fa fa-tachometer" style="padding-right:7px;"></i>Dashboard</a></li>
+                            <li class="nav-item" role="presentation"><a class="nav-link" href="login.html" id="nav_login" style="padding-right:20px;"><i class="fa fa-sign-in" style="padding-right:7px;"></i>Login</a></li>
+                            <li class="nav-item" role="presentation"><a class="nav-link" href="signup.html" id="nav_register" style="padding-right:20px;"><i class="fa fa-wpforms" style="padding-right:7px;"></i>Register</a></li>
+                        </ul>
                     </div>
-                </nav>
             </div>
-        </header>
+        </nav>
     </div>
-    <section class="d-block"></section>
+    <div style="height:100vh;">
+        <div style="height:191px;border:2px solid blue;margin:13px;">
+            <p style="font-size:25px;font-family:'News Cycle', sans-serif;padding:10px;">Add a student</p>
+            <div class="row" style="width:335px;">
+                <div class="col">
+                    <p style="padding:5px;">Student Name:</p>
+                </div>
+                <div class="col" style="padding:10px;"><input type="text" id="student_name" list="student_list"></div>
+            </div><button class="btn btn-primary" type="button" id="add_btn" style="margin:0px 20px;width:102px;">Add</button></div>
+    </div>
     <div class="footer-basic" style="background-color:#439d4c;">
         <footer>
             <div class="social"><a href="https://www.instagram.com/pchackingsquad/" style="color:rgb(255,255,255);"><i class="icon ion-social-instagram"></i></a><a href="#" style="color:rgb(255,255,255);"><i class="icon ion-social-twitter" style="color:rgb(255,255,255);"></i></a></div>
