--- a/templates/students.html
+++ b/templates/students.html
@@ -64,7 +64,7 @@
     <div class="row">
         <div class="col"><div id="dashboard"></div></div>
     </div>
-    <div id="student_div" style="padding-right:10px;padding-left:10px;padding-top:20px;height:508px;">
+    <div id="student_div" style="padding-right:10px;padding-left:10px;padding-top:20px;height:100vh;">
         <div class="container student-template" style="display:none" student_uid="">
             <div class="d-block" style="height:auto;background-color:#ffffff;padding:10px;padding-left:20px;padding-right:10px;margin-bottom:5px;">
                 <div class="d-inline-block" style="font-family:'News Cycle', sans-serif;width:75%;">
@@ -106,6 +106,7 @@
     <script src="static/js/website_function/failed_login_modal.js"></script>
     <script src="static/js/server_function/confirmation_confirmed.js"></script>
     <script src="static/js/website_function/navbar.js"></script>
+    <script src="static/js/server_function/add_student.js"></script>
     <script src="static/js/server_function/review_confirmed.js"></script>
     <script src="static/js/server_function/students.js"></script>
     <script src="static/js/website_function/logout.js"></script>
