--- a/templates/logout.html
+++ b/templates/logout.html
@@ -89,6 +89,7 @@
     <script src="static/js/website_function/failed_login_modal.js"></script>
     <script src="static/js/server_function/confirmation_confirmed.js"></script>
     <script src="static/js/website_function/navbar.js"></script>
+    <script src="static/js/server_function/add_student.js"></script>
     <script src="static/js/server_function/review_confirmed.js"></script>
     <script src="static/js/server_function/students.js"></script>
     <script src="static/js/website_function/logout.js"></script>
