--- a/templates/review_confirmed.html
+++ b/templates/review_confirmed.html
@@ -5,39 +5,39 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>webapp</title>
-    <link rel="stylesheet" href="static/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="static/fonts/font-awesome.min.css">
-    <link rel="stylesheet" href="static/fonts/ionicons.min.css">
+    <link rel="stylesheet" href="../static/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../static/fonts/font-awesome.min.css">
+    <link rel="stylesheet" href="../static/fonts/ionicons.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=News+Cycle">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700">
     <link rel="stylesheet" href="https://cdn.quilljs.com/1.3.6/quill.snow.css">
-    <link rel="stylesheet" href="static/css/-Countdown-BS4-.css">
-    <link rel="stylesheet" href="static/css/-Fixed-Navbar-start-with-transparency-BS4-.css">
-    <link rel="stylesheet" href="static/css/Bold-BS4-Animated-Back-To-Top.css">
-    <link rel="stylesheet" href="static/css/Features-Boxed.css">
-    <link rel="stylesheet" href="static/css/Footer-Clean.css">
-    <link rel="stylesheet" href="static/css/footer.css">
-    <link rel="stylesheet" href="static/css/Header-Blue.css">
-    <link rel="stylesheet" href="static/css/Highlight-Phone.css">
-    <link rel="stylesheet" href="static/css/input/input_errors.css">
-    <link rel="stylesheet" href="static/css/Google-Style-Login.css">
-    <link rel="stylesheet" href="static/css/input/input_sucesses.css">
-    <link rel="stylesheet" href="static/css/navbar1.css">
-    <link rel="stylesheet" href="static/css/Profile-Edit-Form.css">
-    <link rel="stylesheet" href="static/css/Profile-Edit-Form1.css">
-    <link rel="stylesheet" href="static/css/Sidebar-Menu.css">
-    <link rel="stylesheet" href="static/css/Sidebar-Menu1.css">
-    <link rel="stylesheet" href="static/css/sidebar.css">
-    <link rel="stylesheet" href="static/css/Smooth-Scrollto-button-read-Description.css">
-    <link rel="stylesheet" href="static/css/styles.css">
-    <link rel="stylesheet" href="static/css/quill.css">
+    <link rel="stylesheet" href="../static/css/-Countdown-BS4-.css">
+    <link rel="stylesheet" href="../static/css/-Fixed-Navbar-start-with-transparency-BS4-.css">
+    <link rel="stylesheet" href="../static/css/Bold-BS4-Animated-Back-To-Top.css">
+    <link rel="stylesheet" href="../static/css/Features-Boxed.css">
+    <link rel="stylesheet" href="../static/css/Footer-Clean.css">
+    <link rel="stylesheet" href="../static/css/footer.css">
+    <link rel="stylesheet" href="../static/css/Header-Blue.css">
+    <link rel="stylesheet" href="../static/css/Highlight-Phone.css">
+    <link rel="stylesheet" href="../static/css/input/input_errors.css">
+    <link rel="stylesheet" href="../static/css/Google-Style-Login.css">
+    <link rel="stylesheet" href="../static/css/input/input_sucesses.css">
+    <link rel="stylesheet" href="../static/css/navbar1.css">
+    <link rel="stylesheet" href="../static/css/Profile-Edit-Form.css">
+    <link rel="stylesheet" href="../static/css/Profile-Edit-Form1.css">
+    <link rel="stylesheet" href="../static/css/Sidebar-Menu.css">
+    <link rel="stylesheet" href="../static/css/Sidebar-Menu1.css">
+    <link rel="stylesheet" href="../static/css/sidebar.css">
+    <link rel="stylesheet" href="../static/css/Smooth-Scrollto-button-read-Description.css">
+    <link rel="stylesheet" href="../static/css/styles.css">
+    <link rel="stylesheet" href="../static/css/quill.css">
 </head>
 
 <body>
     <div class="row" style="height:179px;">
         <div class="col">
             <nav class="navbar navbar-light navbar-expand-lg fixed-top bg-white transparency border-bottom border-light" id="transmenu" style="color:rgb(255,255,255);background-color:#439d4c;">
-                <div class="container"><a class="navbar-brand text-success" href="index.html" style="font-family:'News Cycle', sans-serif;font-size:39px;">&nbsp;<img class="img-fluid" src="static/img/Aphel_icon.png" alt="Aphel Technologies" width="97px" height="97px" style="padding-right:0px;margin-right:10px;margin-bottom:7px;"></a>
+                <div class="container"><a class="navbar-brand text-success" href="index.html" style="font-family:'News Cycle', sans-serif;font-size:39px;">&nbsp;<img class="img-fluid" src="../static/img/Aphel_icon.png" alt="Aphel Technologies" width="97px" height="97px" style="padding-right:0px;margin-right:10px;margin-bottom:7px;"></a>
                     <button
                         class="navbar-toggler collapsed" data-toggle="collapse" data-target="#navcol-1"><span></span><span></span><span></span></button>
                         <div class="collapse navbar-collapse" id="navcol-1" style="font-family:'News Cycle', sans-serif;font-size:22px;">
@@ -74,32 +74,32 @@
             <ul
                 class="list-inline"></ul>
                 <p class="copyright" style="color:rgb(255,255,255);">Alphel @ 2018</p>
-        </footer><a href="#0" class="cd-top js-cd-top cd-top--fade-out cd-top--show" style="background-image:url('static/img/cd-top-arrow.svg');width:40px;height:40px;">Top</a></div>
-    <script src="static/js/jquery.min.js"></script>
-    <script src="static/bootstrap/js/bootstrap.min.js"></script>
+        </footer><a href="#0" class="cd-top js-cd-top cd-top--fade-out cd-top--show" style="background-image:url('../static/img/cd-top-arrow.svg');width:40px;height:40px;">Top</a></div>
+    <script src="../static/js/jquery.min.js"></script>
+    <script src="../static/bootstrap/js/bootstrap.min.js"></script>
     <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
-    <script src="static/js/server_function/announcement_editor.js"></script>
-    <script src="static/js/server_function/server_bridge.js"></script>
-    <script src="static/js/server_function/cookie_manager.js"></script>
-    <script src="static/js/init.js"></script>
-    <script src="static/js/server_function/signup_form.js"></script>
-    <script src="static/js/website_function/-Countdown-BS4-.js"></script>
-    <script src="static/js/website_function/-Fixed-Navbar-start-with-transparency-BS4-.js"></script>
-    <script src="static/js/website_function/Bold-BS4-Animated-Back-To-Top.js"></script>
-    <script src="static/js/website_function/Sidebar-Menu.js"></script>
-    <script src="static/js/website_function/Profile-Edit-Form.js"></script>
-    <script src="static/js/website_function/Smooth-Scrollto-button-read-Description.js"></script>
-    <script src="static/js/server_function/login_form.js"></script>
-    <script src="static/js/server_function/dashboard.js"></script>
-    <script src="static/js/server_function/post_announcement.js"></script>
-    <script src="static/js/server_function/user_announcements.js"></script>
-    <script src="static/js/website_function/failed_login_modal.js"></script>
-    <script src="static/js/server_function/confirmation_confirmed.js"></script>
-    <script src="static/js/website_function/navbar.js"></script>
-    <script src="static/js/server_function/add_student.js"></script>
-    <script src="static/js/server_function/review_confirmed.js"></script>
-    <script src="static/js/server_function/students.js"></script>
-    <script src="static/js/website_function/logout.js"></script>
+    <script src="../static/js/server_function/announcement_editor.js"></script>
+    <script src="../static/js/server_function/server_bridge.js"></script>
+    <script src="../static/js/server_function/cookie_manager.js"></script>
+    <script src="../static/js/init.js"></script>
+    <script src="../static/js/server_function/signup_form.js"></script>
+    <script src="../static/js/website_function/-Countdown-BS4-.js"></script>
+    <script src="../static/js/website_function/-Fixed-Navbar-start-with-transparency-BS4-.js"></script>
+    <script src="../static/js/website_function/Bold-BS4-Animated-Back-To-Top.js"></script>
+    <script src="../static/js/website_function/Sidebar-Menu.js"></script>
+    <script src="../static/js/website_function/Profile-Edit-Form.js"></script>
+    <script src="../static/js/website_function/Smooth-Scrollto-button-read-Description.js"></script>
+    <script src="../static/js/server_function/login_form.js"></script>
+    <script src="../static/js/server_function/dashboard.js"></script>
+    <script src="../static/js/server_function/post_announcement.js"></script>
+    <script src="../static/js/server_function/user_announcements.js"></script>
+    <script src="../static/js/website_function/failed_login_modal.js"></script>
+    <script src="../static/js/server_function/confirmation_confirmed.js"></script>
+    <script src="../static/js/website_function/navbar.js"></script>
+    <script src="../static/js/server_function/add_student.js"></script>
+    <script src="../static/js/server_function/review_confirmed.js"></script>
+    <script src="../static/js/server_function/students.js"></script>
+    <script src="../static/js/website_function/logout.js"></script>
 </body>
 
 </html>
