--- a/templates/index.html
+++ b/templates/index.html
@@ -52,10 +52,26 @@
                                             role="menu"><a class="dropdown-item" role="presentation" href="http://pchacks.ca/index.html#about"><i class="fa fa-handshake-o" style="padding-right:5px;"></i>About Us</a><a class="dropdown-item" role="presentation" href="http://pchacks.ca/index.html#contact"><i class="fa fa-volume-control-phone" style="padding-right:5px;"></i>Contact</a></div>
                                     </li>
                                     <li class="dropdown"><a class="dropdown-toggle nav-link dropdown-toggle" data-toggle="dropdown" aria-expanded="false" href="#" id="nav_user" style="padding-right:20px;"><i class="fa fa-user" style="padding-right:7px;"></i>User</a>
-                                        <div class="dropdown-menu"
-                                            role="menu"><a class="dropdown-item" role="presentation" href="profile.html"><i class="fa fa-address-card" style="padding-right:5px;"></i>Profile</a><a class="dropdown-item" role="presentation" href="post_announcement.html"><i class="fa fa-envelope-open-o" style="padding-right:5px;"></i>Create Announcement</a>
-                                            <a
-                                                class="dropdown-item" role="presentation" href="user_announcements.html"><i class="fa fa-pencil"></i>&nbsp;Edit Announcements</a><a class="dropdown-item" role="presentation" href="logout.html"><i class="fa fa-sign-out"></i>&nbsp;Logout</a></div>
+                                        <div class="dropdown-menu" role="menu">
+                                            <a class="dropdown-item" role="presentation" href="profile.html">
+                                                <i class="fa fa-address-card" style="padding-right:5px;"></i>Profile
+                                            </a>
+                                            <a class="dropdown-item" role="presentation" href="post_announcement.html">
+                                                <i class="fa fa-envelope-open-o" style="padding-right:5px;"></i>Create Announcement
+                                            </a>
+                                            <a class="dropdown-item" role="presentation" href="user_announcements.html">
+                                                <i class="fa fa-pencil"></i>&nbsp;Edit Announcements
+                                            </a>
+                                            <a class="dropdown-item admin" role="presentation" href="students.html">
+                                                <i class="fa fa-book"></i>&nbsp;Manage Students
+                                            </a>
+                                            <a class="dropdown-item admin" role="presentation" href="add_student.html">
+                                                <i class="fa fa-plus"></i><i class="fa fa-"></i>&nbsp;Add Student
+                                            </a>
+                                            <a class="dropdown-item" role="presentation" href="logout.html">
+                                                <i class="fa fa-sign-out"></i>&nbsp;Logout
+                                            </a>
+                                        </div>
                                     </li>
                                     <li class="nav-item" role="presentation"><a class="nav-link" href="dashboard.html" style="padding-right:20px;"><i class="fa fa-tachometer" style="padding-right:7px;"></i>Dashboard</a></li>
                                     <li class="nav-item" role="presentation"><a class="nav-link" href="login.html" id="nav_login" style="padding-right:20px;"><i class="fa fa-sign-in" style="padding-right:7px;"></i>Login</a></li>
