Fixed footers on post_announcement.html

--- a/templates/post_announcement.html
+++ b/templates/post_announcement.html
@@ -61,12 +61,12 @@
             <div class="d-block" style="height:73px;background-color:#ffffff;padding:10px;padding-left:20px;padding-right:20px;padding-top:15px;"><button class="btn btn-primary btn-block btn-lg d-inline-block btn-signin ann-post-btn" type="submit" id="save_button" style="background-color:#439d4c;width:246px;font-size:18px;height:47px;">Post Announcement</button></div>
         </div>
     </div>
-    <div class="footer-basic" style="background-color:#439d4c;">
+    <div class="footer-basic" style="background-color:#439d4c;position:absolute;bottom:0;width:100%;">
         <footer>
             <div class="social"><a href="https://www.instagram.com/pchackingsquad/" style="color:rgb(255,255,255);"><i class="icon ion-social-instagram"></i></a><a href="#" style="color:rgb(255,255,255);"><i class="icon ion-social-twitter" style="color:rgb(255,255,255);"></i></a></div>
             <ul
-                class="list-inline"></ul>
-                <p class="copyright" style="color:rgb(255,255,255);">Alphel @ 2018</p>
+                    class="list-inline"></ul>
+            <p class="copyright" style="color:rgb(255,255,255);">Alphel @ 2018</p>
         </footer><a href="#0" class="cd-top js-cd-top cd-top--fade-out cd-top--show" style="background-image:url('../static/img/cd-top-arrow.svg');width:40px;height:40px;">Top</a></div>
     <script src="../static/js/jquery.min.js"></script>
     <script src="../static/bootstrap/js/bootstrap.min.js"></script>
