--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,43 @@
                     <h1 style="color:rgb(255,255,255);font-family:'News Cycle', sans-serif;">Aphel</h1>
                     <h2 class="font-weight-normal" style="font-family:'News Cycle', sans-serif;color:#ffffff;font-size:25px;"><em>Sign up for Aphel today, and get more connected to your school!</em><br></h2>
                 </div>
-                <custom-nav></custom-nav>
+                <nav class="navbar navbar-light navbar-expand-lg fixed-top bg-white transparency border-bottom border-light" id="transmenu" style="color:rgb(255,255,255);background-color:#439d4c;">
+                    <div class="container"><a class="navbar-brand text-success" href="index.html" style="font-family:\News Cycle\, sans-serif;font-size:39px;">&nbsp;<img class="img-fluid" src="../static/img/Aphel_icon.png" alt="Aphel Technologies" width="97px" height="97px" style="padding-right:0px;margin-right:10px;margin-bottom:7px;"></a>
+                        <button class="navbar-toggler collapsed" data-toggle="collapse" data-target="#navcol-1"><span></span><span></span><span></span></button>
+                        <div class="collapse navbar-collapse" id="navcol-1" style="font-family:\News Cycle\, sans-serif;font-size:22px;">
+                            <ul class="nav navbar-nav ml-auto">
+                                <li class="dropdown"><a class="dropdown-toggle nav-link dropdown-toggle" data-toggle="dropdown" aria-expanded="false" href="#" style="padding-right:20px;"><i class="fa fa-info-circle" style="padding-right:7px;"></i>Info</a>
+                                    <div class="dropdown-menu" role="menu"><a class="dropdown-item" role="presentation" href="http://pchacks.ca/index.html#about"><i class="fa fa-handshake-o" style="padding-right:5px;"></i>About Us</a><a class="dropdown-item" role="presentation" href="http://pchacks.ca/index.html#contact"><i class="fa fa-volume-control-phone" style="padding-right:5px;"></i>Contact</a></div>
+                                </li>
+                                <li class="dropdown"><a class="dropdown-toggle nav-link dropdown-toggle" data-toggle="dropdown" aria-expanded="false" href="#" id="nav_user" style="padding-right:20px;display:none;"><i class="fa fa-user" style="padding-right:7px;"></i>User</a>
+                                    <div class="dropdown-menu" role="menu">
+                                        <a class="dropdown-item" role="presentation" href="profile.html">
+                                            <i class="fa fa-address-card" style="padding-right:5px;"></i>Profile
+                                        </a>
+                                        <a class="dropdown-item" role="presentation" href="post_announcement.html">
+                                            <i class="fa fa-envelope-open-o" style="padding-right:5px;"></i>Create Announcement
+                                        </a>
+                                        <a class="dropdown-item" role="presentation" href="user_announcements.html">
+                                            <i class="fa fa-pencil"></i>&nbsp;Edit Announcements
+                                        </a>
+                                        <a class="dropdown-item admin" role="presentation" href="students.html" style="display:none">
+                                            <i class="fa fa-book"></i>&nbsp;Manage Students
+                                        </a>
+                                        <a class="dropdown-item admin" role="presentation" href="add_student.html" style="display:none">
+                                            <i class="fa fa-plus"></i><i class="fa fa-"></i>&nbsp;Add Student
+                                        </a>
+                                        <a class="dropdown-item" role="presentation" href="logout.html">
+                                            <i class="fa fa-sign-out"></i>&nbsp;Logout
+                                        </a>
+                                    </div>
+                                </li>
+                                <li class="nav-item" role="presentation"><a class="nav-link" href="dashboard.html" style="padding-right:20px;"><i class="fa fa-tachometer" style="padding-right:7px;"></i>Dashboard</a></li>
+                                <li class="nav-item" role="presentation"><a class="nav-link" href="login.html" id="nav_login" style="padding-right: 20px; display: none;"><i class="fa fa-sign-in" style="padding-right:7px;"></i>Login</a></li>
+                                <li class="nav-item" role="presentation"><a class="nav-link" href="signup.html" id="nav_register" style="padding-right: 20px; display: none;"><i class="fa fa-wpforms" style="padding-right:7px;"></i>Register</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </nav>
             </div>
         </header>
     </div>
@@ -108,32 +144,36 @@
                 <p class="copyright" style="color:rgb(255,255,255);">Alphel @ 2018</p>
         </footer><a href="#0" class="cd-top js-cd-top cd-top--fade-out cd-top--show" style="background-image:url('../static/img/cd-top-arrow.svg');width:40px;height:40px;">Top</a></div>
     <section class="d-block"></section>
+
     <script src="../static/js/jquery.min.js"></script>
     <script src="../static/bootstrap/js/bootstrap.min.js"></script>
     <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
-    <script src="../static/js/custom_elements/custom_navbar.js"></script>
-    <script src="../static/js/server_function/announcement_editor.js"></script>
-    <script src="../static/js/server_function/server_bridge.js"></script>
-    <script src="../static/js/server_function/cookie_manager.js"></script>
-    <script src="../static/js/init.js"></script>
-    <script src="../static/js/server_function/signup_form.js"></script>
+
+    <script src="../static/js/website_function/navbar.js"></script>
     <script src="../static/js/website_function/-Countdown-BS4-.js"></script>
     <script src="../static/js/website_function/-Fixed-Navbar-start-with-transparency-BS4-.js"></script>
     <script src="../static/js/website_function/Bold-BS4-Animated-Back-To-Top.js"></script>
     <script src="../static/js/website_function/Sidebar-Menu.js"></script>
     <script src="../static/js/website_function/Profile-Edit-Form.js"></script>
     <script src="../static/js/website_function/Smooth-Scrollto-button-read-Description.js"></script>
+    <script src="../static/js/website_function/failed_login_modal.js"></script>
+    <script src="../static/js/website_function/logout.js"></script>
+
+    <script src="../static/js/server_function/announcement_editor.js"></script>
+    <script src="../static/js/server_function/server_bridge.js"></script>
+    <script src="../static/js/server_function/cookie_manager.js"></script>
+    <script src="../static/js/init.js"></script>
+    <script src="../static/js/server_function/signup_form.js"></script>
     <script src="../static/js/server_function/login_form.js"></script>
     <script src="../static/js/server_function/dashboard.js"></script>
     <script src="../static/js/server_function/post_announcement.js"></script>
     <script src="../static/js/server_function/user_announcements.js"></script>
-    <script src="../static/js/website_function/failed_login_modal.js"></script>
     <script src="../static/js/server_function/confirmation_confirmed.js"></script>
-    <script src="../static/js/website_function/navbar.js"></script>
     <script src="../static/js/server_function/add_student.js"></script>
     <script src="../static/js/server_function/review_confirmed.js"></script>
     <script src="../static/js/server_function/students.js"></script>
-    <script src="../static/js/website_function/logout.js"></script>
+
+
 </body>
 
 </html>
