Fixed overflow for dashboard announcement template.

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -78,12 +78,14 @@
     <div class="row">
         <div class="col">
             <div id="dashboard_div" style="padding-right:10px;padding-left:10px;height:auto;">
-                <div class="container" id="dashboard_announcement_template" style="padding:0px;margin-bottom:21px;border:2px solid green;display:none;">
+                <div class="container" id="dashboard_announcement_template" style="padding:0px;margin-bottom:21px;border:2px solid green;display: none;">
 
                     <div class="d-block" style="height:70px;background-color:#439d4c;padding:10px;padding-left:20px;padding-right:20px;">
                         <blockquote class="blockquote">
                             <p id="announcement_title" class="mb-0" style="color:rgb(255,255,255);font-family:'News Cycle', sans-serif;">Announcement Title</p>
-                            <footer class="blockquote-footer" id="announcement_info" style="color:rgb(255,255,255);font-family:'News Cycle', sans-serif;">Club Name, Name of user that posted this</footer>
+                            <footer class="blockquote-footer" id="announcement_info" style="color:rgb(255,255,255);font-family:'News Cycle', sans-serif;white-space: nowrap;overflow-x: auto;overflow-y: hidden;">
+                                Club Name, Name of user that posted this
+                            </footer>
                         </blockquote>
                     </div>
 
