Working custom elements on chrome.

--- a/templates/confirmation.html
+++ b/templates/confirmation.html
@@ -53,10 +53,10 @@
                                         <a class="dropdown-item" role="presentation" href="profile.html">
                                             <i class="fa fa-address-card" style="padding-right:5px;"></i>Profile
                                         </a>
-                                        <a class="dropdown-item" role="presentation" href="post_announcement.html">
+                                        <a class="dropdown-item auth-for-post" role="presentation" href="post_announcement.html">
                                             <i class="fa fa-envelope-open-o" style="padding-right:5px;"></i>Create Announcement
                                         </a>
-                                        <a class="dropdown-item" role="presentation" href="user_announcements.html">
+                                        <a class="dropdown-item auth-for-post" role="presentation" href="user_announcements.html">
                                             <i class="fa fa-pencil"></i>&nbsp;Edit Announcements
                                         </a>
                                         <a class="dropdown-item admin" role="presentation" href="students.html" style="display:none">
