--- a/templates/add_student.html
+++ b/templates/add_student.html
@@ -35,11 +35,11 @@
 
 <body>
     <div style="height:183px;">
-        <nav class="navbar navbar-light navbar-expand-lg fixed-top bg-white transparency border-bottom border-light" id="transmenu" style="color:rgb(255,255,255);background-color:#439d4c;"> 
-            <div class="container"><a class="navbar-brand text-success" href="index.html" style="font-family:\News Cycle\, sans-serif;font-size:39px;">&nbsp;<img class="img-fluid" src="../static/img/Aphel_icon.png" alt="Aphel Technologies" width="97px" height="97px" style="padding-right:0px;margin-right:10px;margin-bottom:7px;"></a> 
-                    <button class="navbar-toggler collapsed" data-toggle="collapse" data-target="#navcol-1"><span></span><span></span><span></span></button> 
-                        <div class="collapse navbar-collapse" id="navcol-1" style="font-family:\News Cycle\, sans-serif;font-size:22px;"> 
-                                <ul class="nav navbar-nav ml-auto"> 
+        <nav class="navbar navbar-light navbar-expand-lg fixed-top bg-white transparency border-bottom border-light" id="transmenu" style="color:rgb(255,255,255);background-color:#439d4c;">
+            <div class="container"><a class="navbar-brand text-success" href="index.html" style="font-family:\News Cycle\, sans-serif;font-size:39px;">&nbsp;<img class="img-fluid" src="../static/img/Aphel_icon.png" alt="Aphel Technologies" width="97px" height="97px" style="padding-right:0px;margin-right:10px;margin-bottom:7px;"></a>
+                    <button class="navbar-toggler collapsed" data-toggle="collapse" data-target="#navcol-1"><span></span><span></span><span></span></button>
+                        <div class="collapse navbar-collapse" id="navcol-1" style="font-family:\News Cycle\, sans-serif;font-size:22px;">
+                                <ul class="nav navbar-nav ml-auto">
                                         <li class="dropdown"><a class="dropdown-toggle nav-link dropdown-toggle" data-toggle="dropdown" aria-expanded="false" href="#" style="padding-right:20px;"><i class="fa fa-info-circle" style="padding-right:7px;"></i>Info</a> 
                                                 <div class="dropdown-menu" role="menu"><a class="dropdown-item" role="presentation" href="http://pchacks.ca/index.html#about"><i class="fa fa-handshake-o" style="padding-right:5px;"></i>About Us</a><a class="dropdown-item" role="presentation" href="http://pchacks.ca/index.html#contact"><i class="fa fa-volume-control-phone" style="padding-right:5px;"></i>Contact</a></div> 
                                             </li> 
@@ -48,10 +48,10 @@
                                                         <a class="dropdown-item" role="presentation" href="profile.html"> 
                                                                 <i class="fa fa-address-card" style="padding-right:5px;"></i>Profile 
                                                             </a> 
-                                                        <a class="dropdown-item" role="presentation" href="post_announcement.html"> 
+                                                        <a class="dropdown-item auth-for-post" role="presentation" href="post_announcement.html" style="display: none">
                                                                 <i class="fa fa-envelope-open-o" style="padding-right:5px;"></i>Create Announcement 
                                                             </a> 
-                                                        <a class="dropdown-item" role="presentation" href="user_announcements.html"> 
+                                                        <a class="dropdown-item auth-for-post" role="presentation" href="user_announcements.html" style="display: none">
                                                                 <i class="fa fa-pencil"></i>&nbsp;Edit Announcements 
                                                             </a> 
                                                         <a class="dropdown-item admin" role="presentation" href="students.html" style="display:none"> 
