--- a/templates/profile.html
+++ b/templates/profile.html
@@ -95,23 +95,31 @@
                                     <hr>
                                     <div class="form-row">
                                         <div class="col-sm-12 col-md-6">
-                                            <div class="form-group"><label>Firstname </label><input class="form-control" type="text" name="firstname"></div>
+                                            <div class="form-group">
+                                                <label>Firstname </label>
+                                                <input id="firstname" class="form-control" type="text">
+                                            </div>
                                         </div>
                                         <div class="col-sm-12 col-md-6">
-                                            <div class="form-group"><label>Lastname </label><input class="form-control" type="text" name="lastname"></div>
+                                            <div class="form-group">
+                                                <label>Lastname </label>
+                                                <input id="lastname" class="form-control" type="text">
+                                            </div>
                                         </div>
                                     </div>
-                                    <div class="form-group"><label>Email </label><input class="form-control" type="email" autocomplete="off" required="" name="email"></div>
+                                    <div class="form-group"><label>Email </label><input disabled class="form-control"></div>
                                     <div class="form-row">
                                         <div class="col-sm-12 col-md-6">
-                                            <div class="form-group"><label>Grade</label><input class="form-control" type="password" name="password" autocomplete="off" required=""></div>
+                                            <div class="form-group">
+                                                <label>Grade</label>
+                                                <select id="grade">
+                                                    <option value="9">9</option>
+                                                    <option value="10">10</option>
+                                                    <option value="11">11</option>
+                                                    <option value="12">12</option>
+                                                </select>
+                                            </div>
                                         </div>
-                                        <div class="col-sm-12 col-md-6">
-                                            <div class="dropdown"><button class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-expanded="false" type="button" style="height:38px;margin:25px;background-color:rgb(255,255,255);color:rgb(0,0,0);">Clubs</button>
-                                                <div
-                                                    class="dropdown-menu" role="menu"><a class="dropdown-item" role="presentation" href="#">First Item</a><a class="dropdown-item" role="presentation" href="#">Second Item</a><a class="dropdown-item" role="presentation" href="#">Third Item</a></div>
-                                        </div>
-                                    </div>
                                 </div>
                                 <hr>
                                 <div class="form-row">
